kubernetes/ressources/apps/speedtest-plotter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: speedtest-plotter
  labels:
    app: speedtest-plotter
  name: speedtest-plotter
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: speed-eighty-three-me-tls
      hosts:
        - speed.eighty-three.me
  rules:
  - host: speed.eighty-three.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-plotter
            port:
              number: 8000
